--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
-                        <img src="profile-image.jpg" alt="Sushruth Veldi" class="profile-image">
+                        <img src="IMG_9659.png" alt="Sushruth Veldi" class="profile-image">
                         <div class="image-overlay"></div>
                     </div>
                 </div>
