--- a/index.html
+++ b/index.html
@@ -49,20 +49,9 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">Hi, I'm Sushruth Veldi</h1>
-                    <h2 class="hero-subtitle">Software Developer</h2>
-                    <p class="hero-description">
-                        Passionate about leveraging data science and machine learning to solve complex problems. 
-                        Specialized in building scalable software solutions, seismic data processing, geospatial analysis, and full-stack development.
-                    </p>
+                    <h2 class="hero-subtitle">A Software Developer in making</h2>
                     <div class="hero-buttons">
-                        <a href="#contact" class="btn btn-primary">Get In Touch</a>
-                        <a href="#projects" class="btn btn-secondary">View Projects</a>
-                    </div>
-                </div>
-                <div class="hero-image">
-                    <div class="image-container">
-                        <img src="IMG_9659.png" alt="Sushruth Veldi" class="profile-image">
-                        <div class="image-overlay"></div>
+                        <a href="download/Sushruth_Veldi_SE_Resume25.pdf" class="btn btn-primary" download>Download Resume</a>
                     </div>
                 </div>
             </div>
@@ -74,6 +63,9 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
+                <div class="about-image">
+                    <img src="about/Profile.png" alt="About Me Image">
+                </div>
                 <div class="about-text">
                     <p>
                         I'm a Software Developer with specialized data science skills, holding a Master's degree in Data Science from The George Washington University. 
