--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <a href="#experience" class="nav-link">Experience</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#education" class="nav-link">Education</a>
+                </li>
+                <li class="nav-item">
                     <a href="#projects" class="nav-link">Projects</a>
                 </li>
                 <li class="nav-item">
@@ -147,6 +150,77 @@
                             <li>Built geospatial visualization tools using NumPy and Pandas</li>
                             <li>Improved efficiency by 40% through automation</li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education" class="education">
+        <div class="container">
+            <h2 class="section-title">Education</h2>
+            <div class="education-timeline">
+                <div class="education-item">
+                    <div class="education-content">
+                        <div class="education-header">
+                            <h3>Master of Science in Data Science</h3>
+                            <span class="institution">The George Washington University</span>
+                            <span class="duration">2022 - 2024</span>
+                        </div>
+                        <p class="location">Washington, DC</p>
+                        <p class="description">Specialized in machine learning, statistical analysis, and data visualization with hands-on experience in Python, R, and cloud technologies.</p>
+                    </div>
+                </div>
+
+                <div class="education-item">
+                    <div class="education-content">
+                        <div class="education-header">
+                            <h3>Bachelor of Technology in Computer Science</h3>
+                            <span class="institution">JNTU Hyderabad</span>
+                            <span class="duration">2018 - 2022</span>
+                        </div>
+                        <p class="location">Hyderabad, India</p>
+                        <p class="description">Strong foundation in programming, algorithms, and software engineering principles with First Class Honors.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Certifications Section -->
+            <div class="certifications">
+                <h3 class="certifications-title">Certifications & Professional Development</h3>
+                <div class="certifications-grid">
+                    <div class="certification-card">
+                        <div class="cert-icon">
+                            <i class="fab fa-aws"></i>
+                        </div>
+                        <h4>AWS Cloud Practitioner</h4>
+                        <p>Amazon Web Services</p>
+                        <span class="cert-year">2024</span>
+                    </div>
+                    <div class="certification-card">
+                        <div class="cert-icon">
+                            <i class="fab fa-python"></i>
+                        </div>
+                        <h4>Python for Data Science</h4>
+                        <p>IBM/Coursera</p>
+                        <span class="cert-year">2023</span>
+                    </div>
+                    <div class="certification-card">
+                        <div class="cert-icon">
+                            <i class="fas fa-chart-bar"></i>
+                        </div>
+                        <h4>Tableau Desktop Specialist</h4>
+                        <p>Tableau</p>
+                        <span class="cert-year">2023</span>
+                    </div>
+                    <div class="certification-card">
+                        <div class="cert-icon">
+                            <i class="fab fa-docker"></i>
+                        </div>
+                        <h4>Docker Fundamentals</h4>
+                        <p>Docker Inc.</p>
+                        <span class="cert-year">2024</span>
                     </div>
                 </div>
             </div>
